[tool.poetry]
name = "scootertester-process"
version = "0.1.0"
description = ""
authors = ["Michael Shtutman <michaelshtutman@fb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
geopy = "^2.4.1"
folium = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
